Cap Nhat Makefile

--- a/README
+++ b/README
@@ -6,4 +6,6 @@ Yêu cầu :
 	+ Pandas	
 	+ Cython
 	+ Cmake/Gcc
-	
+
+Hướng dẫn:
+	https://drive.google.com/file/d/1dt72EUWXs71m2VOJSwvpGjQPlp0pBu4O/view?		fbclid=IwAR2vZLdHXACDAhwbrHcSxrouKFJpPoULTMAl_nBFX0sLxKZSTYtOwwWxGN0
