--- a/README
+++ b/README
@@ -1,11 +1,11 @@
+Giữa kỳ:
+	Yêu cầu :	
+		+ Python3
+		+ Matplotlib
+		+ Sklearn
+		+ Pandas	
+		+ Cython
+		+ Cmake/Gcc
 
-Yêu cầu :	
-	+ Python3
-	+ Matplotlib
-	+ Sklearn
-	+ Pandas	
-	+ Cython
-	+ Cmake/Gcc
-
-Hướng dẫn:
-	https://drive.google.com/file/d/1dt72EUWXs71m2VOJSwvpGjQPlp0pBu4O/view?		fbclid=IwAR2vZLdHXACDAhwbrHcSxrouKFJpPoULTMAl_nBFX0sLxKZSTYtOwwWxGN0
+	Hướng dẫn:
+		https://drive.google.com/file/d/1dt72EUWXs71m2VOJSwvpGjQPlp0pBu4O/view?		fbclid=IwAR2vZLdHXACDAhwbrHcSxrouKFJpPoULTMAl_nBFX0sLxKZSTYtOwwWxGN0
