--- a/README
+++ b/README
@@ -8,4 +8,12 @@ Giữa kỳ:
 		+ Cmake/Gcc
 
 	Hướng dẫn:
-		https://drive.google.com/file/d/1dt72EUWXs71m2VOJSwvpGjQPlp0pBu4O/view?		fbclid=IwAR2vZLdHXACDAhwbrHcSxrouKFJpPoULTMAl_nBFX0sLxKZSTYtOwwWxGN0
+		https://drive.google.com/file/d/1dt72EUWXs71m2VOJSwvpGjQPlp0pBu4O/view?				fbclid=IwAR2vZLdHXACDAhwbrHcSxrouKFJpPoULTMAl_nBFX0sLxKZSTYtOwwWxGN0
+
+Cuồi kỳ:
+	Yêu cầu:
+		+ Pillow
+		+ opencv-python
+		+ pyinstaller
+		+ Numba
+		+ colorama >=0.3.9
