--- a/README
+++ b/README
@@ -23,4 +23,6 @@ Cuồi kỳ:
 		+ Cython
 		+ Cmake/Gcc(Unix), mingw/Windows Subsystem for Linux(Windows)
 		+ tkinter
+	 Hướng dẫn:
+	 	https://drive.google.com/file/d/1XyP4PqldLNahZbzefz6BSBQLqkgS2Lw7/view?usp=sharing
 
